0029942: Porting to Debian80-64 : Regressions in Modeling Algorithms after integration fix for 29807

Correction in the test case perf/modalg/bug27021.